--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 07 Jun 2005 Kevin Rosenberg <kevin@rosenberg.net>
+	* Version 3.1.16
 	* db-mysql/mysql-api.lisp: Commit patch from Espen Wiborn
 	to support UTF-8 on sbcl unicode.
 	
