--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.1.17-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Wed, 08 Jun 2005 13:25:06 -0600
+
 cl-sql (3.1.16-1) unstable; urgency=low
 
   * New upstream
