--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,14 @@
 09 Jun 2005 Kevin Rosenberg <kevin@rosenberg.net>
-	* clsql-mysql.asd: Renamed uffi/mysql interface library from
-	mysql to uffi_mysql
-	* db-mysql/uffi_mysql.c: Renamed from mysql.c
-	* db-mysql/Makefile, db-mysql/mysql-loader.lisp: Rename shared library
+	* clsql-mysql.asd: Renamed clsql/mysql interface library from
+	mysql to clsql_mysql
+	* clsql-uffi.asd: Renamed clsql/uffi interface library from
+	mysql to clsql_uffi
+	* uffi/clsql_uffi.c: Renamed from uffi.c
+	* db-mysql/clsql_mysql.c: Renamed from mysql.c
+	* db-mysql/Makefile, db-mysql/Makefile.msvc, db-mysql/mysql-loader.lisp: Rename shared library
+	* uffi/Makefile, uffi/Makefile.msvc, uffi/uffi-loader.lisp: Rename shared library
 	* db-*/*-loader.lisp: Commit big patch from Edi Weitz to remove
 	absolute pathnames when searching for foreign libraries.
-	* uffi/clsql-uffi-loader: New file from Edi Weitz for support
 	foreign library loading.
 	
 07 Jun 2005 Kevin Rosenberg <kevin@rosenberg.net>
