--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+22 Aug 2005  Kevin Rosenberg <kevin@rosenberg.net>
+	* uffi/clsql-uffi-loader.lisp: Commit patch from astor@pvv.ntnu.no to
+	display search path when error occurs loading foreign library.
+	
 05 Jul 2005  Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 3.2.1
 	* doc/appendix.xml: Incorporate Edi Weitz's notes into documentation
