--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,10 @@
-06 Sep 2005  Kevin Rosenberg <kevin@rosenberg.net>
+08 Sep 2005  Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 3.2.2
 	* db-oracle/oracle-sql.lisp: Add check for zero increment as
 	suggested by Edi Weitz. Add missing database-sequence-last function
-	as noted and tested by Edi Weitz.
+	as noted and tested by Edi Weitz. Ensure that UFFI buffer is freed
+	in handle-oci-error. Add unwind-protect to sql-stmt-exec. Free UFFI
+	stmthp object when query cursor is freed with OCI.
 
 22 Aug 2005  Kevin Rosenberg <kevin@rosenberg.net>
 	* uffi/clsql-uffi-loader.lisp: Commit patch from astor@pvv.ntnu.no to
