--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+26 Oct 2005  Kevin Rosenberg <kevin@rosenberg.net>
+	* Version 3.3.2
+	* sql/expressions.lisp: Avoid parenthesis on multiple group-by fields
+	as noted by Harald Hanche-Olsen.
+	* tests/test-syntax.lisp: Add test for multiple field group-by
+	
 25 Oct 2005  Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 3.3.1
 	* sql/time.lisp: Commit patch from Alan Shields to
