--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.3.2-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Tue, 25 Oct 2005 11:43:31 -0600
+
 cl-sql (3.3.1-1) unstable; urgency=low
 
   * New upstream
