--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+30 Oct 2005  Kevin Rosenberg <kevin@rosenberg.net>
+	* Version 3.3.3
+	* sql/oodml.lisp: Apply patch from Drew Crampsie to fix
+	update-objects-joins when using the :target-slot attribute
+	
 26 Oct 2005  Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 3.3.2
 	* sql/expressions.lisp: Avoid parenthesis on multiple group-by fields
