--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.3.3-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Sun, 30 Oct 2005 21:20:34 -0700
+
 cl-sql (3.3.2-1) unstable; urgency=low
 
   * New upstream
