--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.3.4-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Fri,  4 Nov 2005 12:22:18 -0700
+
 cl-sql (3.3.3-1) unstable; urgency=low
 
   * New upstream
