--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+11 Nov 2005  Kevin Rosenberg <kevin@rosenberg.net>
+	* db-mysql/mysql-client-info.lisp: Recognize MySQL 5
+	* db-mysql/mysql-sql.lisp: Add support for views in MySQL 5
+	
 7 Nov 2005  Kevin Rosenberg <kevin@rosenberg.net>
 	* src/time.lisp: Apply patch from Aleksandar Bakic for ROLL
 	function.
