--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.4.0-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Thu, 10 Nov 2005 15:17:40 -0700
+
 cl-sql (3.3.4-1) unstable; urgency=low
 
   * New upstream
