--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.4.1-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Fri, 11 Nov 2005 09:24:48 -0700
+
 cl-sql (3.4.0-1) unstable; urgency=low
 
   * New upstream
