--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.4.2-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Sat, 12 Nov 2005 10:44:37 -0700
+
 cl-sql (3.4.1-1) unstable; urgency=low
 
   * New upstream
