--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+13 Nov 2005  Kevin Rosenberg <kevin@rosenberg.net>
+	* Version 3.4.3
+	* db-oracle/oracle-{api,sql}.lisp: Patch from James Biel
+	to improve performance
+		
 12 Nov 2005  Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 3.4.2
 	* clsql-uffi.asd: Patch from James Biel improving loading
