--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.4.3-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Sun, 13 Nov 2005 02:11:25 -0700
+
 cl-sql (3.4.2-1) unstable; urgency=low
 
   * New upstream
