--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.4.4-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Mon, 14 Nov 2005 19:41:24 -0700
+
 cl-sql (3.4.3-1) unstable; urgency=low
 
   * New upstream
