--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+15 Nov 2005  Kevin Rosenberg <kevin@rosenberg.net>
+	* Version 3.4.5
+	* sql/expressions.lisp: Patch from James Biel to add subselects
+
 14 Nov 2005  Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 3.4.4 [ Requires UFFI 1.5.7+] 
 	* db-oracle/oracle-{api,sql}.lisp: Patch from James Biel
