--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.4.5-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Tue, 15 Nov 2005 23:42:20 -0700
+
 cl-sql (3.4.4-1) unstable; urgency=low
 
   * New upstream
