--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.4.6-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Wed, 16 Nov 2005 00:57:49 -0700
+
 cl-sql (3.4.5-1) unstable; urgency=low
 
   * New upstream
