--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.4.7-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Fri, 25 Nov 2005 10:41:34 -0700
+
 cl-sql (3.4.6-1) unstable; urgency=low
 
   * New upstream
