--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.5.1-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Fri,  2 Dec 2005 08:19:30 -0700
+
 cl-sql (3.5.0-1) unstable; urgency=low
 
   * New upstream (closes: 339842)
