--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+23 Dec 2005  Kevin Rosenberg <kevin@rosenberg.net>
+	* Version 3.5.1
+	* sql/expressions.lisp: Ensure table names are properly escaped
+	before comparing -- fixes bug reported by Asbjørn Bjørnstad
+	on CLSQL-Devel.
+
 02 Dec 2005  Kevin Rosenberg <kevin@rosenberg.net>
 	* sql/generic-postgresql.lisp: improved decoding of table attribute
 	  parameters [from Vladimir Sekissov]
