--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.5.2-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Fri, 23 Dec 2005 03:46:59 -0700
+
 cl-sql (3.5.1-1) unstable; urgency=low
 
   * New upstream
