--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+16 Jan 2006  Kevin Rosenberg <kevin@rosenberg.net>
+	* Version 3.5.3
+	* sql/time.lisp: Commit patch from Aleksandar Bakic
+	to properly handle destructive flag
+	* db-postgresql-socket/postgresql-socket-api.lisp: Apply patch
+	from Steven Harris for socket files with SBCL.
+	* sql/pool.lisp: Apply patch from Vladimir Sekissov so that
+	new connections added to the pool do not become the *default-database*
+	* sql/connect.lisp: Optionally set *default-database* for pooled
+	connection when make-default is generalized true.
+	
 23 Dec 2005  Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 3.5.1
 	* sql/expressions.lisp: Ensure table names are properly escaped
