--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.5.4-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Tue, 28 Feb 2006 08:48:40 -0700
+
 cl-sql (3.5.3-1) unstable; urgency=low
 
   * New upstream
