--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+09 Mar 2006  Kevin Rosenberg <kevin@rosenberg.net>
+	* Version 3.5.5
+	* uffi/make.sh, db-mysql/make.sh: Add GNU uname
+	
 28 Feb 2006  Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 3.5.4
 	* sql/metaclasses.lisp: Apply patch from Friedrich Dominicus to
