--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.5.5-1) unstable; urgency=low
+
+  * Add GNU uname (closes: 355919)
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Wed,  8 Mar 2006 12:07:27 -0700
+
 cl-sql (3.5.4-1) unstable; urgency=low
 
   * New upstream
