--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+20 Mar 2006  Kevin Rosenberg <kevin@rosenberg.net>
+	* Version 3.5.6
+	* clsql-postgresql-socket.asd, 
+	* db-postgresql-socket/postgresql-socket-package.lisp: 
+	Use the cl-md5 package on all platforms. Based on report 
+	from Alan Caulkins.
+	
 09 Mar 2006  Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 3.5.5
 	* uffi/make.sh, db-mysql/make.sh: Add GNU uname
