--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.5.6-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Mon, 20 Mar 2006 19:45:36 -0700
+
 cl-sql (3.5.5-1) unstable; urgency=low
 
   * Add GNU uname (closes: 355919)
