--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.5.7-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Wed,  3 May 2006 07:50:05 -0600
+
 cl-sql (3.5.6-3) unstable; urgency=low
 
   * Rebuild to update library dependencies (closes: 361849)
