--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+06 May 2006  Kevin Rosenberg <kevin@rosenberg.net>
+	* doc/ref-fdml.xml: Documentation patch from Marcus Pearce for limit keyword
+	
 03 May 2006  Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 3.5.7
 	* sql/time.lisp: Apply patch from Aleksandar Bakic to extended
