--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+08 May 2006  Kevin Rosenberg <kevin@rosenberg.net>
+	* sql/metaclasses.lisp: Patch from James Bielman for
+	checking slot constraints.
+
 06 May 2006  Kevin Rosenberg <kevin@rosenberg.net>
 	* doc/ref-fdml.xml: Documentation patch from Marcus Pearce for limit keyword
 	
