--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.6.0-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Tue,  9 May 2006 09:41:58 -0600
+
 cl-sql (3.5.7-1) unstable; urgency=low
 
   * New upstream
