--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+15 May 2006  Kevin Rosenberg <kevin@rosenberg.net>
+	* doc/ref-ooddl.xml: Add documentation for :db-reader and :db-writer
+	slots for def-view-class macro [as reported missing by Thomas Fischbacher].
+	
 09 May 2006  Kevin Rosenberg <kevin@rosenberg.net>
 	* db-postgresql-socket/postgresql-socket-api.lisp:
 	Apply patch from Marko Kocic adding the socket creation
