--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.6.3-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Fri,  7 Jul 2006 13:00:59 -0600
+
 cl-sql (3.6.2-1) unstable; urgency=low
 
   * New upstream
