--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.6.4-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Sat, 12 Aug 2006 10:18:05 -0600
+
 cl-sql (3.6.3-1) unstable; urgency=low
 
   * New upstream
