--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.6.6-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Mon, 14 Aug 2006 00:53:43 -0600
+
 cl-sql (3.6.5-1) unstable; urgency=low
 
   * New upstream
