--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 14 Aug 2006  Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 3.6.6
 	* sql/generic-postgresql.lisp: Fix assumption that postgres user id
-	is always 1.
+	is always 1. Fixes problem noted with PostgreSQL 8.1.
 
 12 Aug 2006  Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 3.6.5
