--- a/ChangeLog
+++ b/ChangeLog
@@ -1,12 +1,13 @@
 29 Aug 2006  Kevin Rosenberg <kevin@rosenberg.net>
+	* Version 3.7.0: Now supports clisp on linux and windows. Requires latest
+	development versions of clisp and cffi/cffi-uffi-compat
 	* Makefile.common: Add OS detection
 	* uffi/make.sh, db-mysql/make.sh: Remove files
 	* uffi/Makefile, db-mysql/Makefile: Add support for cygwin compilation.
 	Refactor to remove need to make.sh shell scripts. 
 	* clsql.asd: Add support for loop extensions for clisp.
-	* sql/loop-extension.lisp: Add support for ansi-loop on clisp. 
-	Define loop-record-iteration-path in CLSQL-SYS package rather 
-	than CL-USER.
+	* sql/loop-extension.lisp: Define loop-record-iteration-path in CLSQL-SYS 
+	package rather than CL-USER. Add support for ansi-loop on clisp. 
 	* sql/ansi-loop.lisp: New file to support iteration on clisp. 
 
 28 Aug 2006  Kevin Rosenberg <kevin@rosenberg.net>
