--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.7.0-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Wed, 30 Aug 2006 04:03:18 -0600
+
 cl-sql (3.6.7-1) unstable; urgency=low
 
   * New upstream
