--- a/ChangeLog
+++ b/ChangeLog
@@ -5,7 +5,7 @@
 	* uffi/make.sh, db-mysql/make.sh: Remove files
 	* uffi/Makefile, db-mysql/Makefile: Add support for cygwin compilation.
 	Refactor to remove need to make.sh shell scripts. 
-	* clsql.asd: Add support for loop extensions for clisp.
+	* clsql.asd: Add support for loop extensions for clisp. Support clisp via cffi.
 	* sql/loop-extension.lisp: Define loop-record-iteration-path in CLSQL-SYS 
 	package rather than CL-USER. Add support for ansi-loop on clisp. 
 	* sql/ansi-loop.lisp: New file to support iteration on clisp. 
