--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.7.1-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Mon,  4 Sep 2006 21:17:05 -0600
+
 cl-sql (3.7.0-1) unstable; urgency=low
 
   * New upstream
