--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+02 Oct 2006  Kevin Rosenberg <kevin@rosenberg.net>
+	* sql/syntax.lisp: Check that original reader syntax functions
+	stored before trying to restore them.
+	
 20 Sep 2006  Kevin Rosenberg <kevin@rosenberg.net>
 	* sql/syntax.lisp: Apply patch from Marcus Pearce to correctly
 	display sql reader syntax.
