--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.7.4-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Tue,  3 Oct 2006 05:01:09 -0600
+
 cl-sql (3.7.3-1) unstable; urgency=low
 
   * New upstream
